--- a/css/main.css
+++ b/css/main.css
@@ -33,6 +33,12 @@ footer {
     font-size: .8em;
 }
 
+figure {
+    text-align: center;
+    font-style: italic;
+    font-size: smaller;
+}
+
 ul.posts { 
     margin: 20px auto 40px; 
     font-size: 1.5em;
