Adding link for a french translation of the web site.

--- a/_layouts/french.html
+++ b/_layouts/french.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-	<html lang="en">
+	<html lang="fr">
 		<head>
 			<title>{{ page.title }}</title>
-			<!-- link to the French version -->
-			<link rel="alternate" hreflang="fr"
-        	href="/fr"/>
+			<!-- link to the English version -->
+			<link rel="alternate" hreflang="en"
+        	href="../"/>
 
 			<!-- link to main stylesheet -->
 			<link rel="stylesheet" type="text/css" href="/css/main.css">
@@ -14,11 +14,10 @@
 		<body>
 			<nav>
 	    		<ul>
-	        		<li><a href="/">Home</a></li>
-	        		<li><a href="/internship">My work experiences</a></li>
-	        		<li><a href="/project">My completed project</a></li>
-	        		<a href="/fr"> <img id="flag" src="/ressources/fr_flag.png" width="50px" height="25px" style="float:right;" title="Vers le mode Français"> </a>
-
+	        		<li><a href="/fr">Home</a></li>
+	        		<li><a href="/internship/fr">Mon expérience dans le monde du travail</a></li>
+	        		<li><a href="/project/fr">Mes projets réalisés</a></li>
+	        		<a href="/"> <img id="flag" src="/ressources/en_flag.png" width="50px" height="25px" style="float:right;" title="Go to English mode"> </a>
 	    		</ul>
 			</nav>
 
@@ -42,7 +41,7 @@
 	        		</li>
 	        		<li>
 	        			<i class="fa fa-file-pdf-o fa-lg" aria-hidden="true"></i>
-	        			<a href="/ressources/Cyril_MOINEAU_resume.pdf" download>Download my CV</a>
+	        			<a href="/ressources/Cyril_MOINEAU_resume.pdf" download>Téléchargez mon CV</a>
 	        		</li>
 				</ul>
 			</footer>
