--- a/css/main.css
+++ b/css/main.css
@@ -59,3 +59,9 @@ ul.posts {
 ul.posts li {
     list-style: none;
 }
+
+#flag {
+    border-radius: 4px;
+    -moz-border-radius: 4px;
+    -webkit-border-radius: 4px;
+}
