--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
 	        		<li><a href="/">Home</a></li>
 	        		<li><a href="/internship">My work experiences</a></li>
 	        		<li><a href="/project">My completed project</a></li>
-	        		<a href="/fr"> <img id="flag" src="/ressources/fr_flag.png" width="50px" height="25px" style="float:right;" title="Vers le mode Français"> </a>
+	        		<a href="/fr"> <img id="flag" src="/ressources/fr_flag.png" title="Vers le mode Français"> </a>
 
 	    		</ul>
 			</nav>
@@ -33,12 +33,11 @@
 	        		<li> 
 	        			<i class="fa fa-envelope fa-lg" aria-hidden="true"></i>
  						<a href="mailto:moineaucyril@gmail.com">
- 							email
- 						</a>
+ 							email</a>
  					</li>
 	        		<li>
 	        			<i class="fa fa-github fa-lg" aria-hidden="true"></i>
-	        			<a href="https://github.com/cmoineau"> github.com/cmoineau </a>
+	        			<a href="https://github.com/cmoineau"> github.com/cmoineau</a>
 	        		</li>
 	        		<li>
 	        			<i class="fa fa-file-pdf-o fa-lg" aria-hidden="true"></i>
