--- a/_layouts/french.html
+++ b/_layouts/french.html
@@ -4,7 +4,7 @@
 			<title>{{ page.title }}</title>
 			<!-- link to the English version -->
 			<link rel="alternate" hreflang="en"
-        	href="../"/>
+        	href="/"/>
 
 			<!-- link to main stylesheet -->
 			<link rel="stylesheet" type="text/css" href="/css/main.css">
@@ -14,10 +14,10 @@
 		<body>
 			<nav>
 	    		<ul>
-	        		<li><a href="/fr">Home</a></li>
+	        		<li><a href="/fr">Accueil</a></li>
 	        		<li><a href="/internship/fr">Mon expérience dans le monde du travail</a></li>
 	        		<li><a href="/project/fr">Mes projets réalisés</a></li>
-	        		<a href="/"> <img id="flag" src="/ressources/en_flag.png" width="50px" height="25px" style="float:right;" title="Go to English mode"> </a>
+	        		<a href="/"> <img id="flag" src="/ressources/en_flag.png" title="Go to English mode"> </a>
 	    		</ul>
 			</nav>
 
@@ -32,12 +32,11 @@
 	        		<li> 
 	        			<i class="fa fa-envelope fa-lg" aria-hidden="true"></i>
  						<a href="mailto:moineaucyril@gmail.com">
- 							email
- 						</a>
+ 							email</a>
  					</li>
 	        		<li>
 	        			<i class="fa fa-github fa-lg" aria-hidden="true"></i>
-	        			<a href="https://github.com/cmoineau"> github.com/cmoineau </a>
+	        			<a href="https://github.com/cmoineau"> github.com/cmoineau</a>
 	        		</li>
 	        		<li>
 	        			<i class="fa fa-file-pdf-o fa-lg" aria-hidden="true"></i>
