--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,13 @@ body {
     margin: 60px auto;
     width: 70%;
 }
+body ul{
+    margin-bottom: 20px;
+}
+nav{
+    border-bottom: 1px solid #d5d5d5;
+
+}
 nav ul, footer ul {
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
     padding: 0px;
@@ -14,7 +21,7 @@ nav ul li, footer ul li {
 }
 a {
     text-decoration: none;
-    color: #999;
+    color: #2F4F4F;
 }
 a:hover {
     text-decoration: underline;
@@ -23,8 +30,6 @@ h1 {
     font-size: 3em;
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
     text-align: center;
-    border-bottom: groove;
-
 }
 h2 {
     font-size: 2em;
@@ -40,6 +45,7 @@ p {
     line-height: 1.4em;
     color: #333;
 }
+
 footer {
     border-top: 1px solid #d5d5d5;
     font-size: .8em;
@@ -51,6 +57,13 @@ figure {
     font-size: smaller;
 }
 
+.center {
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+}
+
+
 ul.posts { 
     margin: 20px auto 40px; 
     font-size: 1.5em;
@@ -59,9 +72,14 @@ ul.posts {
 ul.posts li {
     list-style: none;
 }
-
+#presentation{
+    padding-bottom: 50px;
+}
 #flag {
     border-radius: 4px;
     -moz-border-radius: 4px;
     -webkit-border-radius: 4px;
+    width: 35px;
+    height: 20px;
+    float:right;
 }
