--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,6 @@
 	        		<li><a href="/internship">My work experiences</a></li>
 	        		<li><a href="/project">My completed project</a></li>
 	        		<a href="/fr"> <img id="flag" src="/ressources/fr_flag.png" title="Vers le mode Français"> </a>
-
 	    		</ul>
 			</nav>
 
@@ -31,7 +30,7 @@
 			<footer>
 	    		<ul>
 	        		<li> 
-	        			<i class="fa fa-envelope fa-lg" aria-hidden="true"></i>
+	        			<i class="fa fa-envelope-o fa-lg" aria-hidden="true"></i>
  						<a href="mailto:moineaucyril@gmail.com">
  							email</a>
  					</li>
@@ -41,7 +40,7 @@
 	        		</li>
 	        		<li>
 	        			<i class="fa fa-file-pdf-o fa-lg" aria-hidden="true"></i>
-	        			<a href="/ressources/Cyril_MOINEAU_resume.pdf" download>Download my CV</a>
+	        			<a href="/ressources/Cyril_MOINEAU_resume.pdf" download>download my CV</a>
 	        		</li>
 				</ul>
 			</footer>
