--- a/_layouts/french.html
+++ b/_layouts/french.html
@@ -15,8 +15,8 @@
 			<nav>
 	    		<ul>
 	        		<li><a href="/fr">Accueil</a></li>
-	        		<li><a href="/internship/fr">Mon expérience dans le monde du travail</a></li>
-	        		<li><a href="/project/fr">Mes projets réalisés</a></li>
+	        		<li><a href="/internship/fr">Expérience</a></li>
+	        		<li><a href="/project/fr">Mes projets</a></li>
 	        		<a href="/"> <img id="flag" src="/ressources/en_flag.png" title="Go to English mode"> </a>
 	    		</ul>
 			</nav>
@@ -30,7 +30,7 @@
 			<footer>
 	    		<ul>
 	        		<li> 
-	        			<i class="fa fa-envelope fa-lg" aria-hidden="true"></i>
+	        			<i class="fa fa-envelope-o fa-lg" aria-hidden="true"></i>
  						<a href="mailto:moineaucyril@gmail.com">
  							email</a>
  					</li>
@@ -40,7 +40,7 @@
 	        		</li>
 	        		<li>
 	        			<i class="fa fa-file-pdf-o fa-lg" aria-hidden="true"></i>
-	        			<a href="/ressources/Cyril_MOINEAU_resume.pdf" download>Téléchargez mon CV</a>
+	        			<a href="/ressources/Cyril_MOINEAU_resume.pdf" download>téléchargez mon CV</a>
 	        		</li>
 				</ul>
 			</footer>
