--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,6 @@
+@font-face{
+    font-family: "Noto Sans", Sans-Serif;
+}
 body {
     margin: 60px auto;
     width: 70%;
@@ -6,8 +9,7 @@ body ul{
     margin-bottom: 20px;
 }
 nav{
-    border-bottom: 1px solid #d5d5d5;
-
+    border-bottom: 1.5px solid;
 }
 nav ul, footer ul {
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
@@ -19,21 +21,46 @@ nav ul li, footer ul li {
     display: inline;
     margin-right: 20px;
 }
+nav a{
+    color: white;
+    background-color: black;
+    text-decoration: : none;
+}
+nav a:hover{
+    color: white;
+    background-color: black;
+    text-decoration: : none;
+}
+nav li{
+    padding: 10px 30px;
+    color: white;
+    background-color: black;
+    -webkit-border-radius: 11px;
+    -moz-border-radius: 11px;
+    border-radius: 11px;
+    border: 2px solid grey;
+}
+nav li:hover {
+    color: white;
+    background-color: black;
+    text-decoration: none
+}
 a {
     text-decoration: none;
-    color: #2F4F4F;
+    color: blue;
 }
 a:hover {
-    text-decoration: underline;
+    background-color: blue;
+    color: white;
 }
 h1 {
     font-size: 3em;
-    font-family:'Helvetica', 'Arial', 'Sans-Serif';
+    font-family:'Noto Sans', 'Helvetica', 'Arial', 'Sans-Serif';
     text-align: center;
 }
 h2 {
     font-size: 2em;
-    font-family:'Helvetica', 'Arial', 'Sans-Serif';
+    font-family:'Noto Sans', 'Helvetica', 'Arial', 'Sans-Serif';
     border-bottom: 1px solid black;
 }
 h3 {
@@ -41,13 +68,24 @@ h3 {
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
 }
 p {
-    font-size: 1em;&
+    font-family: 'Noto Sans', 'Sans-Serif';
+    font-size: 1em;
     line-height: 1.4em;
     color: #333;
 }
 
 footer {
-    border-top: 1px solid #d5d5d5;
+    border-top: 1px solid;
+    font-size: .8em;
+}
+footer a{
+    color: gray;
+    font-size: .8em;
+}
+footer a:hover{
+    color: gray;
+    background-color: white;
+    font-weight:bold; 
     font-size: .8em;
 }
 
