--- a/css/main.css
+++ b/css/main.css
@@ -22,27 +22,27 @@ nav ul li, footer ul li {
     margin-right: 20px;
 }
 nav a{
-    color: white;
-    background-color: black;
+    color: black;
+    background-color: white;
     text-decoration: : none;
 }
 nav a:hover{
-    color: white;
-    background-color: black;
-    text-decoration: : none;
+    color: black;
+    background-color: white;
 }
 nav li{
     padding: 10px 30px;
-    color: white;
-    background-color: black;
+    color: black;
+    background-color: white;
     -webkit-border-radius: 11px;
     -moz-border-radius: 11px;
     border-radius: 11px;
-    border: 2px solid grey;
+    border: 2px solid black;
+
 }
 nav li:hover {
-    color: white;
-    background-color: black;
+    color: black;
+    background-color: white;
     text-decoration: none
 }
 a {
@@ -50,8 +50,11 @@ a {
     color: blue;
 }
 a:hover {
+    font-weight: bold;
+    font-style: italic;
     background-color: blue;
     color: white;
+    border-radius: 3px;
 }
 h1 {
     font-size: 3em;
