Removing the resume

--- a/_layouts/french.html
+++ b/_layouts/french.html
@@ -15,7 +15,7 @@
 			<nav>
 	    		<ul>
 	        		<li><a href="/fr">Accueil</a></li>
-	        		<li><a href="/internship/fr">Expérience</a></li>
+	        		<li><a href="/internship/fr">Expériences</a></li>
 	        		<li><a href="/project/fr">Mes projets</a></li>
 	        		<a href="/"> <img id="flag" src="/ressources/en_flag.png" title="Go to English mode"> </a>
 	    		</ul>
@@ -37,10 +37,6 @@
 	        		<li>
 	        			<i class="fa fa-github fa-lg" aria-hidden="true"></i>
 	        			<a href="https://github.com/cmoineau"> github.com/cmoineau</a>
-	        		</li>
-	        		<li>
-	        			<i class="fa fa-file-pdf-o fa-lg" aria-hidden="true"></i>
-	        			<a href="/ressources/Cyril_MOINEAU_resume.pdf" download>téléchargez mon CV</a>
 	        		</li>
 				</ul>
 			</footer>
