--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,7 +38,9 @@
 	        			<i class="fa fa-github fa-lg" aria-hidden="true"></i>
 	        			<a href="https://github.com/cmoineau"> github.com/cmoineau</a>
 	        		</li>
+	        		<p style="float : right; font-size: 0.8em">Last edition : 15 Oct. 2019</p>
 				</ul>
+
 			</footer>
 
 		</body>
