--- a/css/main.css
+++ b/css/main.css
@@ -1,15 +1,18 @@
 @font-face{
     font-family: "Noto Sans", Sans-Serif;
 }
+html{
+    font-size: 0.5vw + 0.5em;
+}
 body {
     margin: 60px auto;
-    width: 70%;
+    width: 75%;
 }
 body ul{
     margin-bottom: 20px;
 }
 nav{
-    border-bottom: 1.5px solid;
+    border-bottom: 1px solid;
 }
 nav ul, footer ul {
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
@@ -18,13 +21,14 @@ nav ul, footer ul {
     font-weight: bold;
 }
 nav ul li, footer ul li {
-    display: inline;
+    display: inline-block;
     margin-right: 20px;
 }
 nav a{
     color: black;
     background-color: white;
     text-decoration: : none;
+    font-size: 1em;
 }
 nav a:hover{
     color: black;
@@ -38,12 +42,13 @@ nav li{
     -moz-border-radius: 11px;
     border-radius: 11px;
     border: 2px solid black;
+    display: inline-block;
 
 }
 nav li:hover {
     color: black;
     background-color: white;
-    text-decoration: none
+    text-decoration: none;
 }
 a {
     text-decoration: none;
@@ -84,12 +89,14 @@ footer {
 footer a{
     color: gray;
     font-size: .8em;
+    display: inline-block;
 }
 footer a:hover{
     color: gray;
     background-color: white;
     font-weight:bold; 
     font-size: .8em;
+    display: inline-block;
 }
 
 figure {
@@ -120,7 +127,7 @@ ul.posts li {
     border-radius: 4px;
     -moz-border-radius: 4px;
     -webkit-border-radius: 4px;
-    width: 35px;
-    height: 20px;
+    width: 3em;
+    height: 2em;
     float:right;
 }
