--- a/_layouts/french.html
+++ b/_layouts/french.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-	<html lang="fr">
+	<html lang="fr" data-theme='dark'>
 		<head>
 			<title>{{ page.title }}</title>
 			<!-- link to the English version -->
@@ -38,7 +38,7 @@
 	        			<i class="fa fa-github fa-lg" aria-hidden="true"></i>
 	        			<a href="https://github.com/cmoineau"> github.com/cmoineau</a>
 	        		</li>
-	        		<p style="float : right; font-size: 0.8em">Dernière édition :  16 Dec. 2019</p>
+	        		<p style="float : right; font-size: 0.8em">Dernière édition :  17 Dec. 2019</p>
 				</ul>
 			</footer>
 
