--- a/css/main.css
+++ b/css/main.css
@@ -3,83 +3,108 @@
 }
 html{
     font-size: 0.5vw + 0.5em;
+    --bg: white;
+    --color-text: blue;
+    --bg-nav: #232222;
+    --nav-a-c: #ffcc00;
+    --nav-a-bh: #383838;
+    --nav-a-h: #ffcc00;
+    --footer-a: gray;
+    --footer-ah: #3f3f3f;
+    --footer-abh: gray;
 }
+html[data-theme='dark']{
+    --bg: #333333;
+    --color-text: #dddddd;
+    --bg-nav: #232222;
+    --nav-a-c: #ffcc00;
+    --nav-a-bh: #383838;
+    --nav-a-h: #ffcc00;
+    --footer-a: gray;
+    --footer-ah: #3f3f3f;
+    --footer-abh: gray;
+}
+
 body {
-    margin: 60px auto;
-    width: 75%;
+    margin: 0px auto;
+    background-color: var(--bg);
+    color: var(--color-text);
 }
 body ul{
     margin-bottom: 20px;
 }
 nav{
-    border-bottom: 1px solid;
+    border-top: 1px solid black;
+    border-bottom: 1px solid black;
+    background-color: var(--bg-nav);
 }
 nav ul, footer ul {
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
-    padding: 0px;
     list-style: none;
     font-weight: bold;
 }
+
 nav ul li, footer ul li {
     display: inline-block;
-    margin-right: 20px;
+    margin-right: 1em;
 }
 nav a{
-    color: black;
-    background-color: white;
+    color: var(--nav-a-c);
     text-decoration: : none;
     font-size: 1em;
-}
-nav a:hover{
-    color: black;
-    background-color: white;
-}
-nav li{
-    padding: 10px 30px;
-    color: black;
-    background-color: white;
+    padding: 5px 15px;
     -webkit-border-radius: 11px;
     -moz-border-radius: 11px;
     border-radius: 11px;
-    border: 2px solid black;
+}
+nav a:hover{
+    background-color: var(--nav-a-bh);
+    color: var(--nav-a-h);
+}
+nav li{
     display: inline-block;
-
 }
 nav li:hover {
-    color: black;
-    background-color: white;
     text-decoration: none;
 }
 a {
     text-decoration: none;
-    color: blue;
+    color: var(--nav-a-c);
 }
 a:hover {
-    font-weight: bold;
-    background-color: blue;
-    color: white;
+    background-color: var(--nav-a-bh);
+    color: var(--nav-a-h);
     border-radius: 3px;
 }
 h1 {
     font-size: 3em;
     font-family:'Noto Sans', 'Helvetica', 'Arial', 'Sans-Serif';
     text-align: center;
+    text-shadow: 2px 0px 6px black;
 }
 h2 {
     font-size: 2em;
     font-family:'Noto Sans', 'Helvetica', 'Arial', 'Sans-Serif';
-    border-bottom: 1px solid black;
+    border-bottom: 1px solid --color-text;
+    text-shadow: 2px 0px 6px black;
+
 }
 h3 {
     font-size: 1.3em;
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
+    text-shadow: 2px 0px 6px black;
 }
 p {
     font-family: 'Noto Sans', 'Sans-Serif';
     font-size: 1em;
     line-height: 1.4em;
-    color: #333;
+    color: --color-text;
     text-align: justify;
+    text-shadow: 2px 0px 6px black;
+}
+li{
+    text-shadow: 2px 0px 6px black;
+    font-family: 'Noto Sans', 'Sans-Serif';
 }
 
 footer {
@@ -87,13 +112,13 @@ footer {
     font-size: .8em;
 }
 footer a{
-    color: gray;
+    color: var(--footer-a);
     font-size: .8em;
     display: inline-block;
 }
 footer a:hover{
-    color: gray;
-    background-color: white;
+    color: var(--footer-abh);
+    background-color: var(--footer-ah);
     font-weight:bold; 
     font-size: .8em;
     display: inline-block;
@@ -111,6 +136,10 @@ figure {
     display: block;
 }
 
+div.blurb{
+    margin: 0px auto;
+    width: 80%;
+}
 
 ul.posts { 
     margin: 20px auto 40px; 
@@ -130,4 +159,54 @@ ul.posts li {
     width: 3em;
     height: 2em;
     float:right;
+}
+
+input[type=checkbox]{
+    height: 0;
+    width: 0;
+    visibility: hidden;
+}
+
+label {
+    cursor: pointer;
+    text-indent: -9999px;
+    width: 52px;
+    height: 27px;
+    background: grey;
+    float: right;
+    border-radius: 100px;
+    position: relative;
+}
+
+label:after {
+    content: '';
+    position: absolute;
+    top: 3px;
+    left: 3px;
+    width: 20px;
+    height: 20px;
+    background: #fff;
+    border-radius: 90px;
+    transition: 0.3s;
+}
+
+input:checked + label {
+    background: red;
+}
+
+input:checked + label:after {
+    left: calc(100% - 5px);
+    transform: translateX(-100%);
+}
+
+label:active:after {
+    width: 45px;
+}
+
+html.transition,
+html.transition *,
+html.transition *:before,
+html.transition *:after {
+  transition: all 750ms !important;
+  transition-delay: 0 !important;
 }
