Small change before pushing.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
 	        		<li><a href="/">Home</a></li>
 	        		<li><a href="/internship">My work experiences</a></li>
 	        		<li><a href="/project">My completed projects</a></li>
-	        		<a href="/fr"> <img id="flag" src="/ressources/fr_flag.png" title="Vers le mode Français"> </a>
+	        		<a href="/fr" id="flag_link"> <img id="flag" src="/ressources/fr_flag.png" title="Vers le mode Français"> </a>
 	    		</ul>
 			</nav>
 			<!--
@@ -44,7 +44,7 @@
 	        			<i class="fa fa-github fa-lg" aria-hidden="true"></i>
 	        			<a href="https://github.com/cmoineau"> github.com/cmoineau</a>
 	        		</li>
-	        		<p style="float : right; font-size: 0.8em">Last edition : 17 Dec. 2019</p>
+	        		<p style="float : right; font-size: 0.8em">Last edition : 19 Dec. 2019</p>
 				</ul>
 
 			</footer>
