Changing design of main page.

--- a/_layouts/french.html
+++ b/_layouts/french.html
@@ -19,12 +19,12 @@
 	    		</ul>
 			</nav>
 			<!--
-			<div class="toggle-container">
+			<div class="toggle-container" style="margin-right: 1.5em; margin-top: 1em">
 					<input type="checkbox" id="switch" position='fixed' name="theme"/><label for="switch">Toggle</label>
-
     		</div>
-    		-->
-			<div class="container">
+			-->
+
+			<div class="container" style="padding-bottom: 1.5em;">
 			
 				{{ content }}
 			
@@ -41,7 +41,7 @@
 	        			<i class="fa fa-github fa-lg" aria-hidden="true"></i>
 	        			<a href="https://github.com/cmoineau"> github.com/cmoineau</a>
 	        		</li>
-	        		<p style="float : right; font-size: 0.8em">Dernière édition :  19 Dec. 2019</p>
+	        		<p style="float : right; font-size: 0.8em;padding-right: 1em;">Dernière édition :  19 Dec. 2019</p>
 				</ul>
 			</footer>
 
