--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,14 +20,14 @@
 	        		<li><a href="/project">My completed projects</a></li>
 	        		<a href="/fr" id="flag_link"> <img id="flag" src="/ressources/fr_flag.png" title="Vers le mode Français"> </a>
 	    		</ul>
+	    		
 			</nav>
 			<!--
-			<div class="toggle-container">
+			<div class="toggle-container" style="margin-right: 1.5em; margin-top: 1em">
 					<input type="checkbox" id="switch" position='fixed' name="theme"/><label for="switch">Toggle</label>
-
     		</div>
     		-->
-			<div class="container">
+			<div class="container" style="padding-bottom: 1.5em;">
 			
 				{{ content }}
 			
@@ -44,41 +44,41 @@
 	        			<i class="fa fa-github fa-lg" aria-hidden="true"></i>
 	        			<a href="https://github.com/cmoineau"> github.com/cmoineau</a>
 	        		</li>
-	        		<p style="float : right; font-size: 0.8em">Last edition : 19 Dec. 2019</p>
+	        		<p style="float : right; font-size: 0.8em; padding-right: 1em;"; >Last edition : 19 Dec. 2019</p>
 				</ul>
 
 			</footer>
 
 		</body>
-			<script type="text/javascript">
-				let trans = () => {
-		            document.documentElement.classList.add('transition');
-		            window.setTimeout(() => {
-		                document.documentElement.classList.remove('transition')
-		            }, 1000)
-		        }
+		<script type="text/javascript">
+			let trans = () => {
+	            document.documentElement.classList.add('transition');
+	            window.setTimeout(() => {
+	                document.documentElement.classList.remove('transition')
+	            }, 1000)
+	        }
 
 
-				var checkbox = document.getElementById('switch');
-        		checkbox.addEventListener('change', function() {
-		            if(this.checked) {
-		                trans()
-		                document.documentElement.setAttribute('data-theme', 'dark')
-		                localStorage.setItem("data-theme", 1);
-		            } else {
-		                trans()
-		                document.documentElement.setAttribute('data-theme', 'light')
-		                localStorage.setItem("data-theme", 0);
-		            }
-        		})
+			var checkbox = document.getElementById('switch');
+    		checkbox.addEventListener('change', function() {
+	            if(this.checked) {
+	                trans()
+	                document.documentElement.setAttribute('data-theme', 'dark')
+	                localStorage.setItem("data-theme", 1);
+	            } else {
+	                trans()
+	                document.documentElement.setAttribute('data-theme', 'light')
+	                localStorage.setItem("data-theme", 0);
+	            }
+    		})
 
-        		if(!("data-theme" in localStorage)){
-					localStorage.setItem("data-theme", 0);
-				}else{
-					if (localStorage.getItem('data-theme') != 0){
-						document.documentElement.setAttribute('data-theme', 'dark')
-						checkbox.checked = true
-					}
+    		if(!("data-theme" in localStorage)){
+				localStorage.setItem("data-theme", 0);
+			}else{
+				if (localStorage.getItem('data-theme') != 0){
+					document.documentElement.setAttribute('data-theme', 'dark')
+					checkbox.checked = true
 				}
-			</script>
+			}
+		</script>
 	</html>
