Hidding lessons I had.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,8 +16,9 @@
 			<nav>
 	    		<ul>
 	        		<li><a href="/">Home</a></li>
-	        		<li><a href="/internship">My work experiences</a></li>
-	        		<li><a href="/project">My completed projects</a></li>
+	        		<li><a href="/internship">Work experiences</a></li>
+	        		<li><a href="/project">Completed projects</a></li>
+	        		
 	        		<a href="/fr" id="flag_link"> <img id="flag" src="/ressources/fr_flag.png" title="Vers le mode Français"> </a>
 	    		</ul>
 	    		
