--- a/_layouts/french.html
+++ b/_layouts/french.html
@@ -1,4 +1,27 @@
 <!DOCTYPE html>
+	<script>
+		function httpGet(theUrl){
+			var xmlHttp = new XMLHttpRequest();
+			xmlHttp.open("GET", theUrl, false); // false for synchronous request
+			xmlHttp.send(null);
+			return xmlHttp.response;
+		}
+		function getLastCommit(){
+			months = [null, "Janvier","Février", "Mars", "Avril", "Mai", "Juin", "Juillet", "Août", "Septembre", "Octobre", "Novembre", "Décembre"]
+
+			commits = httpGet("https://api.github.com/repos/cmoineau/cmoineau.github.io/commits");
+			date = JSON.parse(commits)[1].commit.author.date;
+			year = date[0] + date[1] + date[2] + date[3]
+			month = date[5] + date[6]
+			day = date[8] + date[9]
+			str_date = "Denière édition : " + day + " " + months[parseInt(month)] + " " + year
+			return str_date
+		}
+		function setLastCommit(){
+			var p = document.getElementById("lastchange");
+			p.innerHTML = getLastCommit()
+		}
+	</script>
 	<html lang="fr" data-theme='dark'>
 		<head>
 			<title>{{ page.title }}</title>
@@ -9,7 +32,7 @@
 			<!-- link for icon -->
 			 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 		</head>
-		<body>
+		<body onload="setLastCommit()">
 			<nav>
 	    		<ul>
 	        		<li><a href="/fr">Accueil</a></li>
@@ -41,7 +64,7 @@
 	        			<i class="fa fa-github fa-lg" aria-hidden="true"></i>
 	        			<a href="https://github.com/cmoineau"> github.com/cmoineau</a>
 	        		</li>
-	        		<p style="float : right; font-size: 0.8em;padding-right: 1em;">Dernière édition :  16 Mars. 2020</p>
+	        		<p id="lastchange"; style="float : right; font-size: 0.8em; padding-right: 1em;";></p>
 				</ul>
 			</footer>
 
