--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -67,7 +67,11 @@
  					</li>
 	        		<li>
 	        			<i class="fa fa-github fa-lg" aria-hidden="true"></i>
-	        			<a href="https://github.com/cmoineau"> github.com/cmoineau</a>
+	        			<a href="https://github.com/cmoineau"> github/cmoineau</a>
+					</li>
+					<li>
+	        			<i class="fa fa-linkedin-square fa-lg" aria-hidden="true"></i>
+	        			<a href="https://www.linkedin.com/in/cmoineau"> linkedin/cmoineau</a>
 	        		</li>
 	        		<p id="lastchange"; style="float : right; font-size: 0.8em; padding-right: 1em;";></p>
 				</ul>
