--- a/_layouts/french.html
+++ b/_layouts/french.html
@@ -63,6 +63,10 @@
 	        		<li>
 	        			<i class="fa fa-github fa-lg" aria-hidden="true"></i>
 	        			<a href="https://github.com/cmoineau"> github.com/cmoineau</a>
+					</li>	
+					<li>
+	        			<i class="fa fa-linkedin-square fa-lg" aria-hidden="true"></i>
+	        			<a href="https://www.linkedin.com/in/cmoineau"> linkedin/in/cmoineau</a>
 	        		</li>
 	        		<p id="lastchange"; style="float : right; font-size: 0.8em; padding-right: 1em;";></p>
 				</ul>
