--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -52,7 +52,7 @@
 					<input type="checkbox" id="switch" position='fixed' name="theme"/><label for="switch">Toggle</label>
     		</div>
     		-->
-			<div class="container" style="padding-bottom: 1.5em;">
+			<div class="container" style="padding-bottom: 1.5em; padding-top: 5em;">
 			
 				{{ content }}
 			
@@ -67,11 +67,11 @@
  					</li>
 	        		<li>
 	        			<i class="fa fa-github fa-lg" aria-hidden="true"></i>
-	        			<a href="https://github.com/cmoineau"> github/cmoineau</a>
+	        			<a href="https://github.com/cmoineau"> github.com/cmoineau</a>
 					</li>
 					<li>
 	        			<i class="fa fa-linkedin-square fa-lg" aria-hidden="true"></i>
-	        			<a href="https://www.linkedin.com/in/cmoineau"> linkedin/cmoineau</a>
+	        			<a href="https://www.linkedin.com/in/cmoineau"> linkedin/in/cmoineau</a>
 	        		</li>
 	        		<p id="lastchange"; style="float : right; font-size: 0.8em; padding-right: 1em;";></p>
 				</ul>
