--- a/_layouts/french.html
+++ b/_layouts/french.html
@@ -47,7 +47,7 @@
     		</div>
 			-->
 
-			<div class="container" style="padding-bottom: 1.5em;">
+			<div class="container" style="padding-bottom: 1.5em; padding-top: 5em;">
 			
 				{{ content }}
 			
@@ -63,7 +63,7 @@
 	        		<li>
 	        			<i class="fa fa-github fa-lg" aria-hidden="true"></i>
 	        			<a href="https://github.com/cmoineau"> github.com/cmoineau</a>
-					</li>	
+					</li>²	
 					<li>
 	        			<i class="fa fa-linkedin-square fa-lg" aria-hidden="true"></i>
 	        			<a href="https://www.linkedin.com/in/cmoineau"> linkedin/in/cmoineau</a>
