--- a/css/main.css
+++ b/css/main.css
@@ -40,6 +40,8 @@ body ul{
     margin-bottom: 20px;
 }
 nav{
+    position: fixed;
+    width: 100%;
     border-top: 1px solid black;
     border-bottom: 1px solid black;
     background-color: var(--bg-nav);
