--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,8 @@
-@font-face{
-    font-family: "Noto Sans", Sans-Serif;
-}
+@font-face {
+    font-family: "Open Sans";
+    src: url("/fonts/OpenSans-Regular-webfont.woff2") format("woff2"),
+           url("/fonts/OpenSans-Regular-webfont.woff") format("woff");
+   }
 html{
     font-size: 0.5vw + 0.5em;
     --bg: #f6f8fa;
