--- a/_layouts/french.html
+++ b/_layouts/french.html
@@ -1,27 +1,4 @@
 <!DOCTYPE html>
-	<script>
-		function httpGet(theUrl){
-			var xmlHttp = new XMLHttpRequest();
-			xmlHttp.open("GET", theUrl, false); // false for synchronous request
-			xmlHttp.send(null);
-			return xmlHttp.response;
-		}
-		function getLastCommit(){
-			months = [null, "Janvier","Février", "Mars", "Avril", "Mai", "Juin", "Juillet", "Août", "Septembre", "Octobre", "Novembre", "Décembre"]
-
-			commits = httpGet("https://api.github.com/repos/cmoineau/cmoineau.github.io/commits");
-			date = JSON.parse(commits)[0].commit.author.date;
-			year = date[0] + date[1] + date[2] + date[3]
-			month = date[5] + date[6]
-			day = date[8] + date[9]
-			str_date = "Denière édition : " + day + " " + months[parseInt(month)] + " " + year
-			return str_date
-		}
-		function setLastCommit(){
-			var p = document.getElementById("lastchange");
-			p.innerHTML = getLastCommit()
-		}
-	</script>
 	<html lang="fr" data-theme='dark'>
 		<head>
 			<title>{{ page.title }}</title>
@@ -30,9 +7,10 @@
 			<!-- link to main stylesheet -->
 			<link rel="stylesheet" type="text/css" href="/css/main.css">
 			<!-- link for icon -->
-			 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+			<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+			<script src="../script/last_edition.js"></script>
 		</head>
-		<body onload="setLastCommit()">
+		<body onload="setLastCommit('french')">
 			<nav>
 	    		<ul>
 	        		<li><a href="/fr">Accueil</a></li>
