Removing arrows to navigate.

--- a/css/main.css
+++ b/css/main.css
@@ -13,7 +13,7 @@ html{
     --nav-a-h:#be3523;
     --footer-a: #24292e;
     --footer-ah: #3f3f3f;
-    --footer-abh: blue;
+    --footer-abh: #2a3035;
     --shadow: white;
     --a-bh: #eaebed;
     --a-c: #be3523;
