Change language, 404 and css.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,16 +10,17 @@
 			<link rel="stylesheet" type="text/css" href="/css/main.css">
 			<!-- link for icon -->
 			<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-			<script src="../script/last_edition.js"></script>
+			<script src="/script/last_edition.js"></script>
+			<script src="/script/change_language.js"></script>
 		</head>
 		<body onload="setLastCommit('english')">
 			<nav>
 	    		<ul>
 	        		<li><a href="/">Home</a></li>
 	        		<li><a href="/internship">Work experiences</a></li>
-	        		<li><a href="/project">Completed projects</a></li>
-	        		<a href="/fr" id="flag_link"> <img id="flag" src="/ressources/fr_flag.png" title="Vers le mode Français"> </a>
-	    		</ul>
+					<li><a href="/project">Completed projects</a></li>
+					<img id="flag" src="/ressources/fr_flag.png" title="Vers le mode Français" onclick="change_language()" style="cursor: pointer;">
+				</ul>
 	    		
 			</nav>
 			<!--
