Update internship to work_expericences.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
 			<nav>
 	    		<ul>
 	        		<li><a href="/">Home</a></li>
-	        		<li><a href="/internship">Work experiences</a></li>
+	        		<li><a href="/work_experiences">Work experiences</a></li>
 					<li><a href="/project">Completed projects</a></li>
 					<img id="flag" src="/ressources/fr_flag.png" title="Vers le mode Français" onclick="change_language()" style="cursor: pointer;">
 				</ul>
