--- a/_layouts/french.html
+++ b/_layouts/french.html
@@ -15,7 +15,7 @@
 			<nav>
 	    		<ul>
 	        		<li><a href="/fr">Accueil</a></li>
-	        		<li><a href="/internship/fr">Expériences</a></li>
+	        		<li><a href="/work_experiences/fr">Expériences</a></li>
 					<li><a href="/project/fr">Mes projets</a></li>
 					<img id="flag" src="/ressources/en_flag.png" title="Go to English mode" onclick="change_language()" style="cursor: pointer">
 	    		</ul>
