--- a/css/main.css
+++ b/css/main.css
@@ -156,10 +156,9 @@ div.blurb{
 }
 
 #flex-container{
-    margin-top: 5em;
-    margin-bottom: 0.5em;
     display: flex;
     width: 100%;
+    height: 100%;
 }
 
 #presentation{
